fixed the spacing issue

--- a/memora/src/styles/about.css
+++ b/memora/src/styles/about.css
@@ -38,7 +38,7 @@ font-family: 'Abel';
 font-size: 2.5rem;
 font-style: normal;
 font-weight: 400;
-line-height: 1.5rem; /* 60% */
+line-height: 2rem; /* 60% */
 margin:1rem;
 }
 
